# hestia

./: README.md
client/: package-lock.json  package.json
client/src/: app.html
client/src/components/: DateDisplay.svelte  FileEditor.svelte  FileEditorHeader.svelte  FileHeader.svelte  Footer.svelte  InputField.svelte  LanguageSelector.svelte  Logo.svelte  SaveButton.svelte  StatsModal.svelte  ViewsDisplay.svelte
client/src/components/editors/: CodeMirrorEditor.svelte  codemirrortheme.ts
client/src/lib/: api.ts  format.test.ts  format.ts
client/src/routes/: +error.svelte  +layout.svelte  +page.svelte
client/src/routes/[bin]/: +page.svelte  +page.ts
client/static/: global.css
client/tests/: test.ts
docs/: CONFIGURATION.md  INSTALLATION.md
server/: Cargo.toml  Config.toml  Dockerfile
server/src/: bin.rs  config.rs  key.rs  language.rs  logger.rs  main.rs
server/src/api/: api.rs  middleware.rs  mod.rs
server/src/api/routes/: create_bin.rs  get_bin_by_key.rs  get_statistics.rs  mod.rs
server/src/data/: memory_datamanager.rs  mod.rs  psql_datamanager.rs  sqlite_datamanager.rs
