[package]
name = "server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/einstein8612/hestia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros"] }
base62 = "2.0.2"
chrono = { version = "0.4.35", features = ["serde"] }
log = "0.4.21"
log4rs = "1.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version="1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "chrono", "postgres", "sqlite"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
